# fluxgen-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  main.py  pyproject.toml
fluxgen/: cli.py  config.py  editor.py  exceptions.py  generator.py  presets.py  styling.py
tests/: test_cli.py  test_editor.py  test_styling.py
